apps/core/argocd/repo-server-vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
spec:
  template:
    spec:
      containers:
        - name: argocd-repo-server
          volumeMounts:
            - name: custom-tools
              mountPath: /usr/local/bin/argocd-vault-plugin
              subPath: argocd-vault-plugin
          # Note: AVP config (for the secret manager, etc) can be passed in several ways. This is just one example
          # https://argocd-vault-plugin.readthedocs.io/en/stable/config/
      volumes:
        - name: custom-tools
          emptyDir: {}
      automountServiceAccountToken: true
